Change in color
I have changed the background colour to red from blue.

--- a/photography/ap1/templates/ap1/index.html
+++ b/photography/ap1/templates/ap1/index.html
@@ -5,7 +5,7 @@
     <title>Funda Djagno</title>
     <style>
         body {
-            background-color: lightblue;
+            background-color: red;
         }
     </style>
 </head>
@@ -13,5 +13,8 @@
 <body>
     <h1>This is a HTML page</h1>
     <p>This is a paragraph tag</p>
+    <h1>
+        samrat Malla
+    </h1>
 </body>
 </html>
