--- a/photography/ap1/templates/ap1/index.html
+++ b/photography/ap1/templates/ap1/index.html
@@ -1,20 +1,3 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funda Djagno</title>
-    <style>
-        body {
-            background-color: red;
-        }
-    </style>
-</head>
+{% extends 'ap1/layouts/navbar.html' %}
 
-<body>
-    <h1>This is a HTML page</h1>
-    <p>This is a paragraph tag</p>
-    <h1>
-        samrat Malla
-    </h1>
-</body>
-</html>
+
